2009-04-16  Kevin Watters  <kevinwatters@gmail.com>

        Reviewed by Kevin Ollivier.

        Switch to wxGraphicsBitmap when using wxGraphicsContext so that we're not doing
        unnecessary conversions internally when drawing bitmaps.
        
        https://bugs.webkit.org/show_bug.cgi?id=25248

        * platform/graphics/ImageSource.h:
        * platform/graphics/wx/ImageSourceWx.cpp:
        (WebCore::ImageSource::createFrameAtIndex):
        * platform/graphics/wx/ImageWx.cpp:
        (WebCore::BitmapImage::draw):
        (WebCore::BitmapImage::drawPattern):

2009-04-16  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Dan Bernstein.

        Performing a block style change in an editable root that contains only a br adds a newline
        https://bugs.webkit.org/show_bug.cgi?id=25256

        * editing/CompositeEditCommand.cpp:
        (WebCore::CompositeEditCommand::moveParagraphContentsToNewBlockIfNecessary): Fix a bad check for an root
        block that didn't handle a root that contained a placeholder.

2009-04-16  Eric Seidel  <eric@webkit.org>

        Reviewed by Simon Fraser.

        Fix computeContainerBoundingBox to respect viewport translations
        https://bugs.webkit.org/show_bug.cgi?id=25254

        Previously computeContainerBoundingBox was just adding the viewportTranslation.
        Which, although it has a confusing name, only contains the scale and translation
        for the viewBox/preserveAspectRatio adjustment.  It does not contain the
        translation for the x/y offset of the viewport.
        localToParentTransform() does contain this offset, so we use that instead
        of the previous hacky code.

        * rendering/RenderSVGContainer.h:
        * rendering/RenderSVGViewportContainer.h:
        * rendering/SVGRenderSupport.cpp:
        (WebCore::computeContainerBoundingBox):

2009-04-16  Eric Seidel  <eric@webkit.org>

        Reviewed by Simon Fraser.
